<resources>
    <string name="app_name">PokeWil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokemon_logo">Pokemon Logo</string>
    <string name="pokeName">PokeName</string>
    <string name="pokeHeight">1.3M</string>
    <string name="pokeWeight">300.0 KG</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="hp">HP</string>
    <string name="atk">ATK</string>
    <string name="def">DEF</string>
    <string name="spd">SPD</string>
    <string name="exp">EXP</string>
    <string name="pokeNumber">#1</string>
    <string name="base_stats">Base Stats</string>
    <string name="connected">Connected</string>
    <string name="lost_connection">Lost Connection</string>
</resources>